deployment/node/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node
  name: node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - env:
        - name: CHAINNAME
          value: MyChain
        - name: MASTER_NODE
          value: 20.54.161.4
        - name: NETWORK_PORT
          value: "8571"
        - name: RPC_ALLOW_IP
          value: 0.0.0.0/0.0.0.0
        - name: RPC_PASSWORD
          value: password
        - name: RPC_PORT
          value: "8570"
        - name: RPC_USER
          value: multichainrpc
        image: sensrnetregistry.azurecr.io/sensrnet/node:1.0.0
        name: node
        ports:
        - containerPort: 8571
        - containerPort: 8570
        resources: {}
      restartPolicy: Always
